Start of User, Cape, Tememetry API
